<resources>
    <string name="app_name">LoginLinearLayout</string>
    <string name="txvSignIn">Acceder</string>
    <string name="txvUser">Nombre de usuario</string>
    <string name="txvPassword">Contraseña</string>
    <string name="chkRemember">Recordar Usuario</string>
    <string name="btnSignUp"><u>Registro</u></string>
    <string name="btnSignIn">Acceder</string>
    <string name="btnGoogleSignIn">Google</string>
    <string name="btnFacebookSignIn">Login in with Facebook</string>
</resources>
