<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.loginlinearlayout.LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txvSignIn"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title.Inverse"
        android:layout_marginBottom="@dimen/txvSignIn_margin"/>

    <TextView
        android:id="@+id/txvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtUser"
        android:text="@string/txvUser"
        android:textAppearance="@android:style/TextAppearance.Small.Inverse" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/edtUser_margin"
        android:background="@drawable/shape_edittext"
        style="@style/LoginEditText"/>

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtPassword"
        android:text="@string/txvPassword"
        android:textAppearance="@android:style/TextAppearance.Small.Inverse" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/shape_edittext"
        style="@style/LoginEditText"/>

    <LinearLayout
        android:id="@+id/llyHorizontalSIgn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lly_sign_option"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/chkRemember"
            android:textAppearance="@android:style/TextAppearance.Small.Inverse"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txvSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/btnSignUp"
            android:textAppearance="@android:style/TextAppearance.Small.Inverse" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btnSignIn_margin"
        android:background="@color/colorFacebook"
        android:text="@string/btnSignIn" />

    <Button
        android:id="@+id/btnGoogleSign"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btnGoogleSign_margin"
        android:background="@color/colorGoogle"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/btnGoogleSignIn" />

    <Button
        android:id="@+id/btnFacebookSign"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFacebook"
        android:drawableStart="@drawable/drawable"
        android:text="@string/btnFacebookSignIn" />

</LinearLayout>
<!-- Cuidado al dibujar el componente 2 veces (en el estilo y el el documento del layout xml)-->